Scrollbar and footer positioning issue fix

--- a/src/app/stylesheets/custom.scss
+++ b/src/app/stylesheets/custom.scss
@@ -39,3 +39,23 @@
   -moz-border-radius: 0em 50em 50em 0em;
   border-radius: 0em 50em 50em 0em;
 }
+
+/*fixes scrollbar and footer issues*/
+#primary-container{
+  margin-bottom: -40px;
+}
+
+div#content{
+  margin-bottom: 58px;
+}
+
+.clearfooter{
+  height: 40px;
+  clear: both;
+}
+
+footer.standard{
+  nav.footer{
+    padding: 14px 14px 13px 14px;
+  }
+}
